--- a/index2.html
+++ b/index2.html
@@ -703,19 +703,19 @@
                         <div id="galeclairs">
                             
                             <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/affiche-blanc.jpg" title="ÉCLAIRS affiche blanc">
-                            <img src="creations/eclairs/media/images/affiche-blanc-sm.jpg" alt="ÉCLAIRS affiche blanc" width="130"></a>
+                            <img src="creations/eclairs/media/images/affiche-blanc-sm.jpg" alt="ÉCLAIRS affiche blanc" width="130" class="img-thumbnail"></a>
                             
                             <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/affiche-noir.jpg" title="ÉCLAIRS affiche noir">
-                            <img src="creations/eclairs/media/images/affiche-noir-sm.jpg" alt="ÉCLAIRS affiche noir" width="130"></a>
+                            <img src="creations/eclairs/media/images/affiche-noir-sm.jpg" alt="ÉCLAIRS affiche noir" width="130" class="img-thumbnail"></a>
 
                             <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/eclair-coline-dos.jpg" title="ÉCLAIRS grenier souvenir">
-                            <img src="creations/eclairs/media/images/eclair-coline-dos-sm.jpg" alt="ÉCLAIRS grenier souvenir" width="130"></a>
+                            <img src="creations/eclairs/media/images/eclair-coline-dos-sm.jpg" alt="ÉCLAIRS grenier souvenir" width="130" class="img-thumbnail"></a>
 
                             <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/eclair-coline-dos-telephone.jpg" title="ÉCLAIRS grenier">
-                            <img src="creations/eclairs/media/images/eclair-coline-dos-telephone-sm.jpg" alt="ÉCLAIRS grenier" width="130"></a>
+                            <img src="creations/eclairs/media/images/eclair-coline-dos-telephone-sm.jpg" alt="ÉCLAIRS grenier" width="130" class="img-thumbnail"></a>
 
                             <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/elsa-jambe-nb.jpg" title="ÉCLAIRS danse">
-                            <img src="creations/eclairs/media/images/elsa-jambe-nb-sm.jpg" alt="ÉCLAIRS danse" width="130"></a>
+                            <img src="creations/eclairs/media/images/elsa-jambe-nb-sm.jpg" alt="ÉCLAIRS danse" width="130" class="img-thumbnail"></a>
                             <!--<div style="display: none;">
                                 <a data-gallery="#blueimp-gallery-galeclairs" href="creations/eclairs/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" title="La Cité des Dragons - Bestiole chut"><img src="creations/eclairs/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" alt="Bestiole chut" width="130"></a>
                             </div>-->
