--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@
                                     <span class="txt-nous-soutenir">Nous soutenir<br></span>
                                     <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span>
                                 </a>
+                                <br>
+                                <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
                             </div>
                         </div>
 
@@ -702,6 +704,7 @@
                         <h2>ÉCLAIRS</h2>
                         <p><small>Saison 2018-2019</small></p>
                         <img src="creations/eclairs/media/images/affiche_sm.jpg" alt="ÉCLAIRS - Affiche" class="img-responsive">
+
                         <p><br>théâtre-concert-danse<br><br>
                             Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                         </p>
@@ -727,6 +730,8 @@
                             </div>-->
                              
                         </div>-->
+                        <br>
+                         <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
                         
                         <p><br><a href="#equipe-crea-eclairs-collapse" data-toggle="collapse">Plus d'infos&nbsp;et&nbsp;d'images&nbsp;<i class="fas fa-caret-down" aria-hidden="true"></i></a>.</p>
 
