--- a/index3.html
+++ b/index3.html
@@ -110,12 +110,10 @@
                         </div>
 
                         <div class="col-md-3 col-xl-3">
-                            <div class="button boutton-soutien text-center">
-                                <a class="btn btn-light" type="button" data-toggle="modal" data-target="#modal-soutenir-adhesion">
-                                    <span class="txt-nous-soutenir">Nous soutenir<br></span>
+                                <button type="button" class="btn btn-light boutton-soutien"  data-toggle="modal" data-target="#modal-soutenir-adhesion">
+                                    <span class="txt-nous-soutenir">Nous soutenir</span><br>
                                     <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span>
-                                </a>
-                            </div>
+                                </button>
                         </div>
 
                        
