Le satyre dedicated page + fix galery

--- a/creations/monologue/index.html
+++ b/creations/monologue/index.html
@@ -27,7 +27,7 @@
     <!-- IMAGE GALLERY -- The Gallery as lightbox dialog, should be a child element of the document body -->
     <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
         <div class="slides"></div>
-        <h2 class="title"></h2>
+        <h3 class="title"></h3>
         <a class="prev">‹</a>
         <a class="next">›</a>
         <a class="close">×</a>
@@ -172,7 +172,7 @@
                             </script>
                         </p>
                         <!-- Modal dates passees -->
-                        <h2>Dates passées - Le Monologue d'une Tueuse</h2>
+                        <h2>Dates</h2>
                         <div class="dates-passees">
                             <ul>
                                 <li><b>2011</b></li>
