--- a/creations/satyre/index.html
+++ b/creations/satyre/index.html
@@ -25,7 +25,17 @@
 
 <body id="page-top" data-spy="scroll" data-target="#MA-navbar-creation">
     <!-- IMAGE GALLERY -- The Gallery as lightbox dialog, should be a child element of the document body -->
-    <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+<!--     <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+        <div class="slides"></div>
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+    </div> -->
+
+    <div id="blueimp-gallery" class="blueimp-gallery" data-start-slideshow="false" data-filter=":even">
         <div class="slides"></div>
         <h3 class="title"></h3>
         <a class="prev">‹</a>
