--- a/index.html
+++ b/index.html
@@ -1106,11 +1106,12 @@
                             </div>
                             <div class="clearfix d-block"></div>
                             <div class="col-6 col-md-4 col-xl-3">
-                                <a data-toggle="modal" href="#modal-bio-elsa">
-                        <div class="circle-avatar" style="background-image:url(media/images/elsa-square.jpg)"></div>
-                        <p class="text-center"><strong>Elsa Sanchez</strong></p>
-                        <p class="text-center">Interprétation</p>
-                    </a>
+                                        <a data-toggle="modal" href="#modal-bio-elsa">
+                                <div class="circle-avatar" style="background-image:url(media/images/elsa-square.jpg)"></div>
+                                <p class="text-center"><strong>Elsa Sanchez</strong></p>
+                                <p class="text-center">Interprétation</p>
+                            </a>
+                            </div>
                                 <!-- Modal bio Elsa -->
                                 <div id="modal-bio-elsa" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
@@ -1133,8 +1134,63 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            
                             <div class="clearfix d-sm-block d-md-block d-lg-block"></div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-bio-jean-marc">
+                                    <div class="circle-avatar" style="background-image:url(media/images/Jean-Marc.jpg)">
+                                    </div>
+                                    <p class="text-center"><strong>Jean-Marc Serpin</strong></p>
+                                    <p class="text-center">Contrebasse</p>
+                                </a>
+                            </div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-bio-aladin">
+                                    <div class="circle-avatar" style="background-image:url(media/images/Aladin.jpg)">
+                                    </div>
+                                    <p class="text-center"><strong>Aladin Chaboche</strong></p>
+                                    <p class="text-center">Guitare, composition</p>
+                                </a>
+                            </div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-bio-eric">
+                                    <div class="circle-avatar" style="background-image:url(media/images/eric.jpg)">
+                                    </div>
+                                    <p class="text-center"><strong>Éric Leclerc</strong></p>
+                                    <p class="text-center">Interprétation</p>
+                                </a>
+                            </div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-claire">
+                                    <div class="circle-avatar" style="background-image:url(media/images/Claire.jpg)">
+                                    </div>
+                                    <p class="text-center"><strong>Claire Balerdi</strong></p>
+                                    <p class="text-center">Scénographie</p>
+                                </a>
+                            </div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-serena">
+                                    <div class="circle-avatar" style="background-image:url(media/images/Serena.png)">
+                                    </div>
+                                    <p class="text-center"><strong>Serena Andreasi</strong></p>
+                                    <p class="text-center">Création lumière</p>
+                                </a>
+                            </div>
+
+                            <div class="col-6 col-md-4 col-xl-3">
+                                <a data-toggle="modal" href="#modal-manu">
+                                    <div class="circle-avatar" style="background-image:url(media/images/manu.jpg)">
+                                    </div>
+                                    <p class="text-center"><strong>Emmanuel Borgetto</strong></p>
+                                    <p class="text-center">Construction décor</p>
+                                </a>
+                            </div>
+
                             <!--         <div class="col-6 col-sm-4 col-xl-3">
 
                     <a data-toggle="modal" href="#modal-bio-simon">
