fix capital names pics team

--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-bio-jean-marc">
-                                    <div class="circle-avatar" style="background-image:url(media/images/Jean-Marc.jpg)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/jean-Marc.jpg)">
                                     </div>
                                     <p class="text-center"><strong>Jean-Marc Serpin</strong></p>
                                     <p class="text-center">Contrebasse</p>
@@ -1148,7 +1148,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-bio-aladin">
-                                    <div class="circle-avatar" style="background-image:url(media/images/Aladin.jpg)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/aladin.jpg)">
                                     </div>
                                     <p class="text-center"><strong>Aladin Chaboche</strong></p>
                                     <p class="text-center">Guitare, composition</p>
@@ -1166,7 +1166,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-claire">
-                                    <div class="circle-avatar" style="background-image:url(media/images/Claire.jpg)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/claire.jpg)">
                                     </div>
                                     <p class="text-center"><strong>Claire Balerdi</strong></p>
                                     <p class="text-center">Scénographie</p>
@@ -1175,7 +1175,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-serena">
-                                    <div class="circle-avatar" style="background-image:url(media/images/Serena.png)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/serena.png)">
                                     </div>
                                     <p class="text-center"><strong>Serena Andreasi</strong></p>
                                     <p class="text-center">Création lumière</p>
