--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-bio-jean-marc">
-                                    <div class="circle-avatar" style="background-image:url(media/images/jean-Marc.jpg)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/jean-marc.jpg)">
                                     </div>
                                     <p class="text-center"><strong>Jean-Marc Serpin</strong></p>
                                     <p class="text-center">Contrebasse</p>
@@ -1175,7 +1175,7 @@
 
                             <div class="col-6 col-md-4 col-xl-3">
                                 <a data-toggle="modal" href="#modal-serena">
-                                    <div class="circle-avatar" style="background-image:url(media/images/serena.png)">
+                                    <div class="circle-avatar" style="background-image:url(media/images/serenaa.png)">
                                     </div>
                                     <p class="text-center"><strong>Serena Andreasi</strong></p>
                                     <p class="text-center">Création lumière</p>
