--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="col-md-9 col-xl-7 offset-xl-2">
                             <p class="intro-text text-center">
                                 Mesdames A est une compagnie de spectacle vivant. Elle fait discuter musique, danse et théâtre dans ses créations.<br>
-                                <br> Découvrez <a class="page-scroll" href="#creations"><i>ÉCLAIRS</i>, notre dernière création</a>.
+                                Découvrez <a class="page-scroll" href="#creations"><i>ÉCLAIRS</i>, notre dernière création</a>.
                             </p>
                         </div>
                         <div class="col-md-3 col-xl-3 bouttonsoutien">
@@ -106,7 +106,6 @@
                                 <span class="txt-nous-soutenir">Nous soutenir</span><br>
                                 <span class="txt-nous-soutenir-small">(Soutien et adhésion)</span>
                             </button><br>
-                             <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
                         </div>
                         <div id="modal-soutenir-adhesion" class="modal fade" role="dialog">
                             <div class="modal-dialog">
@@ -160,7 +159,9 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>Pour la rentrée 2018, nous présentons <i>ÉCLAIRS</i>, notre dernière création, au théâtre Le Pari à Tarbes, ainsi qu'à Lapanouse et Villasavary. En 2019, nous vous retrouverons à Escalquens, puis au théâtre Le Ring à Toulouse.</p>
+                    <p>Pour la rentrée 2018, nous présentons <i>ÉCLAIRS</i>, notre dernière création, au théâtre Le Pari à Tarbes, ainsi qu'à Lapanouse et Villasavary. En 2019, nous vous retrouverons à Escalquens, puis au théâtre Le Ring à Toulouse.<br>
+                    <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
+                    </p>
                     <div class="row tweets">
                         <div class="col-11 col-sm-9 col-md-8 col-lg-7">
                             <p><a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders noheader transparent" data-tweet-limit="3" data-show-replies="false">Nos tweets récents</a></p>
@@ -1008,7 +1009,7 @@
                             <!--    <br>
                 Ci-dessous une bio des membres actuels, ainsi qu'une liste des personnes ayant collaborés aux projets par le passé: -->
                         </p>
-                        
+
                         <!--ALICE-->
                         <div class="row">
                             <div class="col-6 col-md-4 col-xl-3">
