--- a/index.html
+++ b/index.html
@@ -159,7 +159,8 @@
             <div class="row">
                 <div class="col-10 offset-1 col-lg-8 offset-lg-2">
                     <h1>Actualités et dates</h1>
-                    <p>Pour la rentrée 2018, nous présentons <i>ÉCLAIRS</i>, notre dernière création, au théâtre Le Pari à Tarbes, ainsi qu'à Lapanouse et Villasavary. En 2019, nous vous retrouverons à Escalquens, puis au théâtre Le Ring à Toulouse.<br>
+                    <p>Pour la saison 2018-2019, nous présentons <i>ÉCLAIRS</i> notre dernière création, au théâtre Le Pari à Tarbes, à Lapanouse, Villasavary, Escalquens, puis au théâtre Le Ring à Toulouse.<br>
+                    <br>
                     <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe>
                     </p>
                     <div class="row tweets">
@@ -252,43 +253,6 @@
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-12 col-md-2 date-jour-mois text-center">
-                                            <span class="float-xs-right"><span class="date-jour">08</span>
-                                            <br><span class="date-mois">DEC</span></span>
-                                        </div>
-                                        <div class="col-12 col-md-6">
-                                            <p class="date">
-                                                <span class="date-lieu">Villasavary (11)</span> - <span class="date-date">samedi 08 décembre</span> à
-                                                <span class="date-heure">20h30</span>
-                                                <br>
-                                                <span class="date-lieu">Halle de Villasavary</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/k3AxE7Pzbzw">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/968065830047022/">Réservations</a></span>
-                                            </p>
-                                        </div>
-                                        <div class="col-12 col-md-4 text-center">
-                                            <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
-                                                <a class="atcb-link">Ajouter au calendrier</a>
-                                                <var class="atc_event">
-                                                <var class="atc_date_start">2018-12-08 20:30:00</var>
-                                                <var class="atc_date_end">2018-12-08 22:00:00</var>
-                                                <var class="atc_timezone">Europe/Paris</var>
-                                                <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
-
-                                                A partir de 10-12 ans
-                                                </var>
-                                                <var class="atc_location">Halle municipale Villasavary</var>
-                                                <var class="atc_organizer">Cie Mesdames A</var>
-                                                <var class="atc_organizer_email">cie.mesdames.a@gmail.com</var>
-                                                </var>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                            <br>-->
-                            <ul class="list-group prochaines-dates">
-                                <li class="list-group-item">
-                                    <div class="row">
-                                        <div class="col-12 col-md-2 date-jour-mois text-center">
                                             <span class="float-xs-right"><span class="date-jour">25</span>
                                             <br><span class="date-mois">JAN</span></span>
                                         </div>
@@ -321,7 +285,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <br>
+                            <br>-->
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
@@ -441,10 +405,10 @@
                     <!--ECLAIRS-->
                     <div class="creations eclairs" id="eclairs">
                         <h2><i class="fas fa-bolt" style="color: #f33128;" aria-hidden="true"></i> ÉCLAIRS <i class="fas fa-bolt" aria-hidden="true" style="color: #f33128;"></i></h2>
-                        <p><small>Saison 2018-2019</small></p>
                         <div class="row">
                             <div class="col-md-8">
-                                <p>théâtre-concert-danse<br><br>
+                                <p><small>Saison 2018-2019</small></p>
+                                <p><small>théâtre-concert-danse</small><br><br>
                                 Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                                 <br>
                                 <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe></p>
@@ -909,8 +873,8 @@
                             <div class="col-sm-6 col-lg-4 ">
                                 <!--Spectateurs-->
                                 <div class="card card-specatateur border-dark bg-transparent text-white mb-3" >
-                                    <a href="creations/SPECTATEURS/index.html">
-                                        <img class="card-img-top img-fluid" src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="danse specatateurs">
+                                    <a href="#spectateurs">
+                                        <img class="card-img-top img-fluid" src="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="danse spectateurs">
                                     </a>
                                     <div class="card-body">
                                         <h5 class="card-title titre-creations-cards"><i>Spectateur(s) -<br>un accident de théâtre</i></h5>
@@ -918,7 +882,7 @@
                                         <p class="card-text"><small>Une fable contemporaine, quelque part entre l'Inde, New-York et la France. Cette quête farfelue nous invite à réagir aux accidents de tous les jours...</small></p>
                                     </div>
                                     <div class="card-footer bg-transparent">
-                                        <a class="link-creation" href="creations/SPECTATEURS/index.html">Voir plus</a>
+                                        <a class="link-creation" href="#spectateurs">Voir plus</a>
                                     </div>
                                 </div>
                             </div>
