--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 ÉCLAIRS propose un écrin onirique dans lequel nous suivons la quête d’une jeune femme (interprétée par la danseuse Elsa Sanchez) sur les pas de sa grand-mère, fantôme bienveillant joué par Coline Lubin. Elle y découvre sa lutte de femme libre et la folie douce de son grand-père, interprété par Éric Leclerc, comédien et slameur... Car ÉCLAIRS, c’est aussi un concert, avec une dizaine de compositions originales interprétées en direct par Aladin Chaboche, guitariste, Jean-Marc Serpin, contrebassiste, et Alice Tabart, au chant, à l’écriture et la mise en scène. Cette dernière a écrit les morceaux en même temps que la pièce, notes et mots se répondant, s’opposant, se complétant afin de créer le deuxième pôle d’énergie nécessaire à cette décharge vitale tant recherchée par les personnages.<br><br>
                                 Théâtre - musique<br>
                                 Tout public à partir de 12 ans<br>
-                                Durée envisagée 1h30<br>
+                                Durée 1h20<br>
                             </p>
                             <h3>Équipe de création</h3>
                             <p class="equip-crea">
