--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                                 <var class="atc_date_end">2018-10-27 22:30:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
                                                 <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
 
                                                 A partir de 10-12 ans
                                                 </var>
@@ -272,7 +272,7 @@
                                                 <var class="atc_date_end">2019-01-25 21:30:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
                                                 <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
 
                                                 A partir de 10-12 ans
                                                 </var>
@@ -309,7 +309,7 @@
                                                 <var class="atc_date_end">2019-04-11 22:00:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
                                                 <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
 
                                                 A partir de 10-12 ans
                                                 </var>
@@ -343,7 +343,7 @@
                                                 <var class="atc_date_end">2019-04-12 22:00:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
                                                 <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
 
                                                 A partir de 10-12 ans
                                                 </var>
@@ -377,7 +377,7 @@
                                                 <var class="atc_date_end">2019-04-13 22:00:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
                                                 <var class="atc_title">ÉCLAIRS - Cie Mesdames A</var>
-                                                <var class="atc_description">Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
+                                                <var class="atc_description">Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.
 
                                                 A partir de 10-12 ans
                                                 </var>
@@ -409,7 +409,7 @@
                             <div class="col-md-8">
                                 <p><small>Saison 2018-2019</small></p>
                                 <p><small>théâtre-concert-danse</small><br><br>
-                                Une jeune femme fait face au fantôme sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
+                                Une jeune femme fait face au fantôme de sa grand-mère, à sa lutte de femme libre et à la folie douce de son grand-père. Le récit est irisé par les interventions de trois musiciens qui viennent ajouter leurs voix à l'orage qui se prépare en elle.<br>
                                 <br>
                                 <iframe id="haWidgetButton" src="https://www.helloasso.com/associations/compagnie-mesdames-a/paiements/souscription-cd-de-la-bande-originale-eclairs/widget-bouton" style="border: none;"></iframe></p>
                             </div>
@@ -524,7 +524,7 @@
                             </p>
                             <h3>Production</h3>
                             <p class="production">
-                                Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d'Aveyron, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création). Ainsi que le soutien de la SPEDIDAM (aide à la à la création de spectacle dramatique et de la bande originale).
+                                Une production de la Compagnie Mesdames A avec le soutien de Tarbes en scène, du Théâtre du Ring, de La Mairie de Toulouse (aide au projet), de la Commune de Sévérac d'Aveyron, du Conseil Départemental de la Haute-Garonne (aide à la création) et du Conseil Régional de l’Occitanie (aide à la création et Égalité H/F). Ainsi que le soutien de la SPEDIDAM (aide à la à la création de spectacle dramatique et de la bande originale) et de la Fondation Empanda.
                                 <br>
                                 <br> Plus de details sur l’équipe et la production dans:
                                 <br>
