--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                                                 <span class="date-lieu">Toulouse</span> - <span class="date-date">jeudi 11 avril</span> à
                                                 <span class="date-heure">20h30</span>
                                                 <br>
-                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/a-venir/">Réservations</a></span>
+                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/event/eclairs/">Réservations</a></span>
                                             </p>
                                         </div>
                                         <div class="col-12 col-md-4 text-center">
@@ -332,7 +332,7 @@
                                                 <span class="date-lieu">Toulouse</span> - <span class="date-date">vendredi 12 avril</span> à
                                                 <span class="date-heure">20h30</span>
                                                 <br>
-                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/a-venir/">Réservations</a></span>
+                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/event/eclairs/">Réservations</a></span>
                                             </p>
                                         </div>
                                         <div class="col-12 col-md-4 text-center">
@@ -366,7 +366,7 @@
                                                 <span class="date-lieu">Toulouse</span> - <span class="date-date">samedi 13 avril</span> à
                                                 <span class="date-heure">20h30</span>
                                                 <br>
-                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/a-venir/">Réservations</a></span>
+                                                <span class="date-lieu">Le Ring</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/ycbqJBitTMN2">Accès</a> - <a class="reservation" href="http://www.theatre2lacte-lering.com/lering/event/eclairs/">Réservations</a></span>
                                             </p>
                                         </div>
                                         <div class="col-12 col-md-4 text-center">
